# Multimodal-Rag-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py  schemas.py
app/config/: settings.py
app/core/: logger.py
app/ingestion/: image_extractor.py  ocr.py  parser.py  table_extractor.py
app/rag/: chunker.py  embedder.py  generator.py  retriever.py  vector_store.py
app/services/: ingestion_service.py  rag_service.py
monitoring/: metrics.py
tests/: test_ask.py  test_health.py  test_index.py
