[project]
name = "multimodal-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.45.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.3.0",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "streamlit>=1.59.1",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]


